--- a/hive_management/templates/remove_hive.html
+++ b/hive_management/templates/remove_hive.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="container-sm" style="background-color: #f0dbb0;">
+<div class="container-sm">
     <br>&nbsp;
     <h5>Remove hive {{ hive.name }}?</h5>
     <form action="" method="post">
