--- a/hive_management/templates/base.html
+++ b/hive_management/templates/base.html
@@ -8,7 +8,8 @@
     <title>nxBee</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #efb680;">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'homepage' %}">nxBee</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +43,7 @@
     {% block page_content %}{% endblock %}
         <div class="col">
           <div class="card h-100">
-            <div class="card-footer" style="background-color: #efb680; text-align: center;">
+            <div class="card-footer" style="text-align: center;">
               <small class="text-muted">Copyright 2023</small>
             </div>
           </div>
