--- a/hive_management/templates/homepage.html
+++ b/hive_management/templates/homepage.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="container-fluid" style="background-color: #f0dbb0;">
+<div class="container-fluid">
         <h3>Hello and welcome on nxBee</h3>
         nxBee is a beehive management page, where You can manage your beehives.
 </div>
