--- a/hive_management/templates/base.html
+++ b/hive_management/templates/base.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'homepage' %}">nxBee</a>
+          <div class="navbar-brand">nxBee</div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,7 +44,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-footer" style="text-align: center;">
-              <small class="text-muted">Copyright 2023</small>
+              <small class="text-muted">Balázs Nagy 2023</small>
             </div>
           </div>
         </div>
