--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -17,10 +17,10 @@
                     <a class="nav-link" href="{% url 'new_hive' %}">Add a new hive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new_hive' %}">New treatment</a>
+                    <a class="nav-link disabled" href="{% url 'new_hive' %}">New treatment</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new_hive' %}">New inspection</a>
+                    <a class="nav-link disabled" href="{% url 'new_hive' %}">New inspection</a>
                 </li>
             </ul>
           </div>
