--- a/hive_management/templates/hive_detail.html
+++ b/hive_management/templates/hive_detail.html
@@ -7,7 +7,8 @@
         <div class="card">
             <div class="card-body">
             <h5 class="card-title">{{ hive.name }}</h5>
-            <hr style="color: {{ hive.color }}; height: 10px; margin: 0;">
+            <h6 class="card-subtitle mb-2 text-muted">{{ hive.created_on }}</h6>
+            <p class="lead" style="background-color: {{ hive.color }}; font-size: 5px;"">&nbsp;</p>
 
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -21,10 +22,10 @@
                             <a class="nav-link" href="{% url 'edit_hive' hive.pk %}">Edit hive details</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'new_hive' %}">Add a treatment to this hive</a>
+                            <a class="nav-link" href="{% url 'add_inspection' hive.pk %}">Add an inspection to this hive</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'new_hive' %}">Add an inspection to this hive</a>
+                            <a class="nav-link disabled" href="{% url 'new_hive' %}">Add a treatment to this hive</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'add_note' hive.pk %}">Add a note to this hive</a>
