--- a/hive_management/templates/homepage.html
+++ b/hive_management/templates/homepage.html
@@ -4,5 +4,7 @@
 <div class="container-fluid">
         <h3>Hello and welcome on nxBee</h3>
         nxBee is a beehive management page, where You can manage your beehives.
+        <br>
+        This website is still in development.
 </div>
 {% endblock %}
