new layout for h_m

--- a/hive_management/templates/base.html
+++ b/hive_management/templates/base.html
@@ -36,7 +36,7 @@
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search hive/note" aria-label="Search">
-                <button class="btn" type="submit">Search</button>
+                <button class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
         </div>
