added reminder for a treatment

--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -84,10 +84,7 @@
             <p class="lead">Stats about your beehives:</p>
             <hr class="my-4">
             <p>
-                Total hives: 10<br>
-            </p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                Total hives: {{ hives | length }}<br>
             </p>
           </div>
 
