--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -33,8 +33,9 @@
 <div class="row">
     <div class="col-9">
         <div class="row row-cols-md-4 g-4">
+            
 {% for hive in hives %}
-    
+        <div class="col-sm-3 mb-2">
         <div class="card">
             <div class="card-body">
             <h5 class="card-title"><a href="{% url 'hive_detail' hive.pk %}" class="link-primary">{{ hive.name }}</a></h5>
@@ -54,6 +55,7 @@
                 <small><a href="{% url 'edit_hive' hive.pk %}" class="link-primary">edit <i class="bi bi-pencil"></i></a></small>
             </p>
             </div>
+        </div>
         </div>
     
 {% endfor %}
