--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -36,11 +36,11 @@
             
 {% for hive in hives %}
         <div class="col-sm-3 mb-2">
-        <div class="card">
+        <div class="card" style="border-color: {{ hive.color }};">
             <div class="card-body">
             <h5 class="card-title"><a href="{% url 'hive_detail' hive.pk %}" class="link-primary">{{ hive.name }}</a></h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ hive.created_on }}</h6>
             <p class="lead" style="background-color: {{ hive.color }}; font-size: 5px;">&nbsp;</p>
+            <h6 class="card-subtitle mb-2 text-muted">{{ hive.created_on }}</h6>
             <p class="card-text">
                 {{ hive.description | linebreaks }}
                 <br>
