--- a/hive_management/templates/hive_management.html
+++ b/hive_management/templates/hive_management.html
@@ -88,6 +88,7 @@
             <hr class="my-4">
             <p>
                 Total hives: {{ hives | length }}<br>
+                Total treatments: {{ treatments | length }}
             </p>
           </div>
 
